--- a/ui-lab/ui-lab.html
+++ b/ui-lab/ui-lab.html
@@ -3,116 +3,83 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>FreeFlow • UI-Lab (root assets)</title>
+<title>FreeFlow • UI-Lab (click-to-voice)</title>
 <style>
   :root{
-    --btn-size: 84px;           /* docelowy rozmiar przycisku na dole */
-    --logo-size: 340px;         /* początkowy rozmiar logo */
-    --in-time: 700ms;           /* czas pojawienia się */
-    --travel-time: 900ms;       /* czas zjazdu do dołu */
+    --btn: 88px;     /* średnica docelowego guzika */
+    --logo: 360px;   /* wielkość logo na starcie */
   }
 
-  /* tło z roota */
   html,body{height:100%}
   body{
     margin:0;
-    background: #0b0f14 url('Background.png?v=2') center/cover no-repeat fixed;
+    background: #0b0f14 url('Background.png?v=3') center/cover no-repeat fixed;
     overflow:hidden;
     font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   }
 
-  /* warstwa na animacje */
-  .stage{
-    position:relative;
-    width:100%; height:100%;
-  }
+  .stage{ position:relative; width:100%; height:100%; }
 
-  /* logo w środku – start */
+  /* kontener, w którym startuje logo (środek ekranu) */
   .logo-wrap{
     position:absolute; inset:0;
     display:flex; align-items:center; justify-content:center;
     pointer-events:none;
   }
   .logo{
-    width:var(--logo-size);
+    width:var(--logo);
     aspect-ratio: 1/1.05;
-    background:url('Freeflow-logo.png?v=2') center/contain no-repeat;
+    background:url('Freeflow-logo.png?v=3') center/contain no-repeat;
     filter: drop-shadow(0 14px 30px rgba(0,0,0,.45));
-    opacity:0; transform: scale(.86) translateY(10px);
-    animation:
-      fadeIn var(--in-time) cubic-bezier(.2,.8,.2,1) 120ms forwards,
-      toButton var(--travel-time) cubic-bezier(.2,.8,.25,1) calc(var(--in-time)+250ms) forwards;
-    transform-origin: 50% 50%;
+    will-change: transform, opacity;
+    opacity:0;                 /* pokażemy po preloaderze */
+    transform: scale(.92);
   }
 
-  /* przycisk docelowy na dole – “slot” */
-  .cta-slot{
+  /* miejsce docelowe guzika */
+  .cta{
     position:absolute; left:50%; bottom:18px; transform:translateX(-50%);
-    width:var(--btn-size); height:var(--btn-size);
+    width:var(--btn); height:var(--btn);
     border-radius:50%;
     display:flex; align-items:center; justify-content:center;
-    pointer-events:none; /* klikamy w .cta real */
+    background: radial-gradient(circle at 32% 32%, #ffd68a, #ff9a2d 62%, #ff7a00 100%);
+    border:2px solid rgba(255,255,255,.1);
+    box-shadow: 0 12px 28px rgba(0,0,0,.45), inset 0 -10px 18px rgba(0,0,0,.25);
+    color:#0e1013; font-weight:700;
+    cursor:pointer; outline:none;
+    z-index:3;
   }
 
-  /* pulsujące halo (pod logo) */
+  /* pulsujące halo pod przyciskiem */
   .halo{
-    position:absolute; inset:0; border-radius:50%;
+    position:absolute; left:50%; bottom:18px; transform:translateX(-50%);
+    width:var(--btn); height:var(--btn);
+    border-radius:50%; pointer-events:none; z-index:2;
+  }
+  .halo::before{
+    content:""; position:absolute; inset:0; border-radius:50%;
     box-shadow: 0 0 0 0 rgba(255,156,28,.35);
     animation: halo 1600ms ease-out infinite;
   }
 
-  /* prawdziwy klikany przycisk (na końcu animacji przykryje halo) */
-  .cta{
-    position:absolute; left:50%; bottom:18px; transform:translateX(-50%);
-    width:var(--btn-size); height:var(--btn-size);
-    border-radius:50%;
-    background: radial-gradient(circle at 32% 32%, #ffd68a, #ff9a2d 62%, #ff7a00 100%);
-    box-shadow:
-      0 10px 30px rgba(0,0,0,.45),
-      inset 0 -10px 20px rgba(0,0,0,.25);
-    border: 2px solid rgba(255,255,255,.08);
-    display:flex; align-items:center; justify-content:center;
-    color:#101418; font-weight:700;
-    cursor:pointer;
-    outline:none; border:none;
-  }
-
-  /* proste “odtwórz ponownie” */
+  /* przycisk powtórki */
   .replay{
-    position:fixed; right:12px; bottom:12px;
+    position:fixed; right:12px; bottom:12px; z-index:4;
     padding:10px 14px; border-radius:12px;
     background: rgba(0,0,0,.45); color:#e9eef6;
     border:1px solid rgba(255,255,255,.14);
     backdrop-filter: blur(6px);
-    cursor:pointer;
-    font-weight:600;
+    cursor:pointer; font-weight:600;
   }
 
-  /* ANIMACJE */
-  @keyframes fadeIn{
-    to{ opacity:1; transform: scale(1) translateY(0); }
-  }
-  @keyframes toButton{
-    0%{
-      transform: translateY(0) scale(1);
-    }
-    55%{
-      transform: translateY(40vh) scale(.55);
-    }
-    100%{
-      /* pozycja przycisku – bottom:18px i skala do ~przycisku */
-      transform: translateY(calc(50vh - 18px)) scale(calc(var(--btn-size)/var(--logo-size)));
-    }
-  }
   @keyframes halo{
     0%  { box-shadow: 0 0 0 0 rgba(255,156,28,.35); opacity:.9; }
     70% { box-shadow: 0 0 0 28px rgba(255,156,28,0); opacity:0; }
     100%{ box-shadow: 0 0 0 0 rgba(255,156,28,0); opacity:0; }
   }
 
-  /* mobile drobne korekty */
   @media (max-width:520px){
-    :root{ --logo-size: 300px; --btn-size: 76px; }
+    :root{ --btn: 78px; --logo: 320px; }
   }
 </style>
 </head>
@@ -120,37 +87,84 @@
 
 <div class="stage" id="stage">
   <div class="logo-wrap"><div class="logo" id="logo"></div></div>
-
-  <!-- slot i halo pod docelowy guzik -->
-  <div class="cta-slot"><div class="halo"></div></div>
-
-  <!-- faktyczny przycisk “click to voice” (teraz demo) -->
+  <div class="halo"></div>
   <button class="cta" id="ctaBtn" aria-label="Click to voice">●</button>
 </div>
 
 <button class="replay" id="replayBtn">▶︎ Odtwórz ponownie</button>
 
 <script>
-  // prosta powtórka animacji
-  const logo = document.getElementById('logo');
-  const replay = document.getElementById('replayBtn');
+  // Pliki w ROOT – zadbaj o nazwy dokładnie jak poniżej:
+  const BG_FILE   = 'Background.png';
+  const LOGO_FILE = 'Freeflow-logo.png'; // <- TU musi być Twoja kropla
+
+  const logoEl   = document.getElementById('logo');
+  const ctaEl    = document.getElementById('ctaBtn');
+  const replayEl = document.getElementById('replayBtn');
+
+  // preloader obrazów, aby animacja startowała spójnie
+  function preload(src){
+    return new Promise((res, rej)=>{
+      const i = new Image();
+      i.onload = ()=>res(src);
+      i.onerror = rej;
+      i.src = src + '?v=3';
+    });
+  }
+
+  function animateLogo(){
+    // pokaż logo i ustaw je w centrum (tam już jest CSS)
+    logoEl.style.opacity = '1';
+    logoEl.style.transform = 'scale(1)';
+
+    // policz wektory: środek logo -> środek przycisku
+    const logoBox = logoEl.getBoundingClientRect();
+    const ctaBox  = ctaEl.getBoundingClientRect();
+
+    const logoCx = logoBox.left + logoBox.width/2;
+    const logoCy = logoBox.top  + logoBox.height/2;
+    const ctaCx  = ctaBox.left  + ctaBox.width/2;
+    const ctaCy  = ctaBox.top   + ctaBox.height/2;
+
+    const dx = ctaCx - logoCx;
+    const dy = ctaCy - logoCy;
+
+    // skala docelowa: dopasuj szerokość logo do guzika
+    const scale = ctaBox.width / logoBox.width;
+
+    // najpierw subtelny fade-in+pop
+    logoEl.animate(
+      [{opacity:0, transform:'scale(0.92)'},{opacity:1, transform:'scale(1)'}],
+      {duration:600, easing:'cubic-bezier(.2,.8,.2,1)'}
+    );
+
+    // potem lot do przycisku i zmiana skali
+    logoEl.animate(
+      [
+        { transform: `translate(0px,0px) scale(1)` },
+        { transform: `translate(${dx}px, ${dy}px) scale(${scale})` }
+      ],
+      { duration: 950, delay: 160, easing: 'cubic-bezier(.2,.8,.25,1)', fill: 'forwards' }
+    );
+  }
 
   function restart(){
-    logo.style.animation = 'none';
-    void logo.offsetWidth; // reflow
-    logo.style.animation =
-      'fadeIn var(--in-time) cubic-bezier(.2,.8,.2,1) 120ms forwards,' +
-      'toButton var(--travel-time) cubic-bezier(.2,.8,.25,1) calc(var(--in-time)+250ms) forwards';
+    // wyczyść inline transform (zostawimy Web Animations żeby "forwards" zniknęło)
+    logoEl.getAnimations().forEach(a => a.cancel());
+    // zresetuj pozycję startową
+    logoEl.style.opacity = '0';
+    logoEl.style.transform = 'scale(.92)';
+    // mały timeout na reflow
+    setTimeout(animateLogo, 40);
   }
-  replay.addEventListener('click', restart);
 
-  // Demo: klik CTA
-  document.getElementById('ctaBtn').addEventListener('click', () => {
-    alert('Tu podepniemy “click-to-voice”.');
-  });
+  replayEl.addEventListener('click', restart);
+  ctaEl.addEventListener('click', ()=>alert('Tu podłączymy Click-to-Voice 🔊'));
 
-  // jeśli obrazy mogą być zcache’owane – uruchom lekko później
-  window.addEventListener('load', () => setTimeout(restart, 80));
+  // start po preładowaniu obrazów
+  Promise.all([preload(BG_FILE), preload(LOGO_FILE)]).then(restart);
+  // awaryjnie – gdyby service worker/cache zwlekał
+  window.addEventListener('load', () => setTimeout(restart, 400));
 </script>
 
 </body>
