--- a/ui-lab/ui-lab.html
+++ b/ui-lab/ui-lab.html
@@ -4,23 +4,21 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>FreeFlow • UI-Lab (click-to-voice)</title>
+
+<!-- KLUCZOWE: ustaw bazę ścieżek na ROOT (z folderu ui-lab wracamy o 1 poziom) -->
+<base href="../">
+
 <style>
-  :root{
-    --btn: 88px;     /* średnica docelowego guzika */
-    --logo: 360px;   /* wielkość logo na starcie */
-  }
+  :root{ --btn:88px; --logo:360px; }
 
   html,body{height:100%}
   body{
-    margin:0;
-    background: #0b0f14 url('Background.png?v=3') center/cover no-repeat fixed;
-    overflow:hidden;
-    font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    margin:0; overflow:hidden;
+    background:#0b0f14 url('Background.png?v=3') center/cover no-repeat fixed;
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   }
-
   .stage{ position:relative; width:100%; height:100%; }
 
-  /* kontener, w którym startuje logo (środek ekranu) */
   .logo-wrap{
     position:absolute; inset:0;
     display:flex; align-items:center; justify-content:center;
@@ -28,59 +26,44 @@
   }
   .logo{
     width:var(--logo);
-    aspect-ratio: 1/1.05;
+    aspect-ratio:1/1.05;
     background:url('Freeflow-logo.png?v=3') center/contain no-repeat;
-    filter: drop-shadow(0 14px 30px rgba(0,0,0,.45));
-    will-change: transform, opacity;
-    opacity:0;                 /* pokażemy po preloaderze */
-    transform: scale(.92);
+    filter:drop-shadow(0 14px 30px rgba(0,0,0,.45));
+    will-change:transform,opacity;
+    opacity:0; transform:scale(.92);
   }
 
-  /* miejsce docelowe guzika */
   .cta{
     position:absolute; left:50%; bottom:18px; transform:translateX(-50%);
-    width:var(--btn); height:var(--btn);
-    border-radius:50%;
+    width:var(--btn); height:var(--btn); border-radius:50%;
     display:flex; align-items:center; justify-content:center;
-    background: radial-gradient(circle at 32% 32%, #ffd68a, #ff9a2d 62%, #ff7a00 100%);
+    background:radial-gradient(circle at 32% 32%, #ffd68a, #ff9a2d 62%, #ff7a00 100%);
     border:2px solid rgba(255,255,255,.1);
-    box-shadow: 0 12px 28px rgba(0,0,0,.45), inset 0 -10px 18px rgba(0,0,0,.25);
-    color:#0e1013; font-weight:700;
-    cursor:pointer; outline:none;
-    z-index:3;
+    box-shadow:0 12px 28px rgba(0,0,0,.45), inset 0 -10px 18px rgba(0,0,0,.25);
+    color:#0e1013; font-weight:700; cursor:pointer; outline:none; z-index:3;
   }
-
-  /* pulsujące halo pod przyciskiem */
   .halo{
     position:absolute; left:50%; bottom:18px; transform:translateX(-50%);
-    width:var(--btn); height:var(--btn);
-    border-radius:50%; pointer-events:none; z-index:2;
+    width:var(--btn); height:var(--btn); border-radius:50%; pointer-events:none; z-index:2;
   }
   .halo::before{
     content:""; position:absolute; inset:0; border-radius:50%;
-    box-shadow: 0 0 0 0 rgba(255,156,28,.35);
-    animation: halo 1600ms ease-out infinite;
+    box-shadow:0 0 0 0 rgba(255,156,28,.35);
+    animation:halo 1600ms ease-out infinite;
   }
-
-  /* przycisk powtórki */
   .replay{
     position:fixed; right:12px; bottom:12px; z-index:4;
     padding:10px 14px; border-radius:12px;
-    background: rgba(0,0,0,.45); color:#e9eef6;
-    border:1px solid rgba(255,255,255,.14);
-    backdrop-filter: blur(6px);
+    background:rgba(0,0,0,.45); color:#e9eef6;
+    border:1px solid rgba(255,255,255,.14); backdrop-filter:blur(6px);
     cursor:pointer; font-weight:600;
   }
-
   @keyframes halo{
-    0%  { box-shadow: 0 0 0 0 rgba(255,156,28,.35); opacity:.9; }
-    70% { box-shadow: 0 0 0 28px rgba(255,156,28,0); opacity:0; }
-    100%{ box-shadow: 0 0 0 0 rgba(255,156,28,0); opacity:0; }
+    0%{box-shadow:0 0 0 0 rgba(255,156,28,.35); opacity:.9}
+    70%{box-shadow:0 0 0 28px rgba(255,156,28,0); opacity:0}
+    100%{box-shadow:0 0 0 0 rgba(255,156,28,0); opacity:0}
   }
-
-  @media (max-width:520px){
-    :root{ --btn: 78px; --logo: 320px; }
-  }
+  @media (max-width:520px){ :root{ --btn:78px; --logo:320px; } }
 </style>
 </head>
 <body>
@@ -94,77 +77,56 @@
 <button class="replay" id="replayBtn">▶︎ Odtwórz ponownie</button>
 
 <script>
-  // Pliki w ROOT – zadbaj o nazwy dokładnie jak poniżej:
   const BG_FILE   = 'Background.png';
-  const LOGO_FILE = 'Freeflow-logo.png'; // <- TU musi być Twoja kropla
+  const LOGO_FILE = 'Freeflow-logo.png'; // plik w ROOT, nazwa dokładnie taka
 
   const logoEl   = document.getElementById('logo');
   const ctaEl    = document.getElementById('ctaBtn');
   const replayEl = document.getElementById('replayBtn');
 
-  // preloader obrazów, aby animacja startowała spójnie
   function preload(src){
     return new Promise((res, rej)=>{
       const i = new Image();
       i.onload = ()=>res(src);
       i.onerror = rej;
-      i.src = src + '?v=3';
+      i.src = src + '?v=3'; // odświeża cache
     });
   }
 
   function animateLogo(){
-    // pokaż logo i ustaw je w centrum (tam już jest CSS)
     logoEl.style.opacity = '1';
     logoEl.style.transform = 'scale(1)';
 
-    // policz wektory: środek logo -> środek przycisku
-    const logoBox = logoEl.getBoundingClientRect();
-    const ctaBox  = ctaEl.getBoundingClientRect();
+    const lb = logoEl.getBoundingClientRect();
+    const cb = ctaEl.getBoundingClientRect();
+    const dx = (cb.left + cb.width/2) - (lb.left + lb.width/2);
+    const dy = (cb.top  + cb.height/2) - (lb.top  + lb.height/2);
+    const sc = cb.width / lb.width;
 
-    const logoCx = logoBox.left + logoBox.width/2;
-    const logoCy = logoBox.top  + logoBox.height/2;
-    const ctaCx  = ctaBox.left  + ctaBox.width/2;
-    const ctaCy  = ctaBox.top   + ctaBox.height/2;
-
-    const dx = ctaCx - logoCx;
-    const dy = ctaCy - logoCy;
-
-    // skala docelowa: dopasuj szerokość logo do guzika
-    const scale = ctaBox.width / logoBox.width;
-
-    // najpierw subtelny fade-in+pop
     logoEl.animate(
-      [{opacity:0, transform:'scale(0.92)'},{opacity:1, transform:'scale(1)'}],
+      [{opacity:0, transform:'scale(.92)'},{opacity:1, transform:'scale(1)'}],
       {duration:600, easing:'cubic-bezier(.2,.8,.2,1)'}
     );
-
-    // potem lot do przycisku i zmiana skali
     logoEl.animate(
       [
-        { transform: `translate(0px,0px) scale(1)` },
-        { transform: `translate(${dx}px, ${dy}px) scale(${scale})` }
+        { transform:`translate(0,0) scale(1)` },
+        { transform:`translate(${dx}px, ${dy}px) scale(${sc})` }
       ],
-      { duration: 950, delay: 160, easing: 'cubic-bezier(.2,.8,.25,1)', fill: 'forwards' }
+      {duration:950, delay:160, easing:'cubic-bezier(.2,.8,.25,1)', fill:'forwards'}
     );
   }
 
   function restart(){
-    // wyczyść inline transform (zostawimy Web Animations żeby "forwards" zniknęło)
-    logoEl.getAnimations().forEach(a => a.cancel());
-    // zresetuj pozycję startową
-    logoEl.style.opacity = '0';
-    logoEl.style.transform = 'scale(.92)';
-    // mały timeout na reflow
+    logoEl.getAnimations().forEach(a=>a.cancel());
+    logoEl.style.opacity='0'; logoEl.style.transform='scale(.92)';
     setTimeout(animateLogo, 40);
   }
 
   replayEl.addEventListener('click', restart);
-  ctaEl.addEventListener('click', ()=>alert('Tu podłączymy Click-to-Voice 🔊'));
+  ctaEl.addEventListener('click', ()=>alert('Click-to-Voice 🔊'));
 
-  // start po preładowaniu obrazów
   Promise.all([preload(BG_FILE), preload(LOGO_FILE)]).then(restart);
-  // awaryjnie – gdyby service worker/cache zwlekał
-  window.addEventListener('load', () => setTimeout(restart, 400));
+  window.addEventListener('load', ()=>setTimeout(restart, 400));
 </script>
 
 </body>
