--- a/index2.html
+++ b/index2.html
@@ -1,113 +1,294 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FreeFlow — tryb testowy</title>
-  <link rel="stylesheet" href="styles.css" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>FreeFlow — tryb testowy (voice)</title>
+<style>
+:root{
+  --bg: #0b0c10;
+  --card: #13151b;
+  --txt: #f1f1f1;
+  --accent: #ffb300;
+  --accent2:#00e5ff;
+}
+*{box-sizing:border-box;-webkit-tap-highlight-color:transparent}
+html,body{height:100%}
+body{
+  margin:0; color:var(--txt);
+  background: radial-gradient(1200px 800px at 50% 20%, #141824, var(--bg));
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  overflow:hidden;
+}
+
+/* Górny pasek */
+.topbar{
+  position:fixed; inset:0 0 auto 0; height:56px;
+  display:flex; align-items:center; justify-content:space-between;
+  padding:0 12px; z-index:3000;
+  background:linear-gradient(180deg, rgba(10,10,15,.92), rgba(10,10,15,.55));
+  backdrop-filter: blur(8px);
+  border-bottom:1px solid rgba(255,255,255,.06);
+}
+.brand{font-weight:800;letter-spacing:.5px}
+.top-actions{display:flex;gap:8px}
+.icon-btn{
+  height:36px; min-width:40px; padding:0 10px; border:0; border-radius:10px;
+  background:#1f2330; color:var(--txt); font-size:18px; cursor:pointer;
+}
+.icon-btn:active{transform:translateY(1px)}
+.badge{font-size:12px;background:var(--accent);color:#1a1a1a;padding:1px 6px;border-radius:999px;margin-left:4px}
+
+/* Menu */
+.dropdown{
+  position:fixed; top:60px; right:10px; z-index:2500;
+  display:none; flex-direction:column; gap:8px;
+  background:var(--card); padding:10px; border-radius:14px;
+  border:1px solid rgba(255,255,255,.08); box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+.dropdown.open{display:flex}
+.dropdown button{
+  background:#202433; color:var(--txt); border:0; border-radius:10px;
+  padding:10px 12px; cursor:pointer; text-align:left;
+}
+.dropdown button:hover{background:#2a2f42}
+
+/* Logo (kropla) */
+.logo-wrap{
+  position:fixed; top:72px; left:50%; transform:translateX(-50%);
+  width:min(76vw, 380px); aspect-ratio:2/3; z-index:2000;
+  animation:drop 800ms cubic-bezier(.2,.8,.2,1) both;
+  filter: drop-shadow(0 10px 20px rgba(0,0,0,.6));
+}
+.logo-svg{width:100%; height:100%}
+
+/* Fale dookoła logo (pokazywane tylko w trybie nagrywania) */
+.rings{
+  position:absolute; inset:-8% -6% -6% -6%; pointer-events:none; opacity:0; transition:opacity .25s ease;
+}
+.ring{
+  position:absolute; inset:0; border-radius:50%;
+  border:2px solid rgba(0,229,255,.55);
+  transform:scale(.85);
+  animation:spin 6s linear infinite, breathe 2.6s ease-in-out infinite;
+  mix-blend-mode:screen;
+}
+.ring.r2{animation-delay:.6s; opacity:.8}
+.ring.r3{animation-delay:1.2s; opacity:.6}
+
+/* Stan nagrywania */
+.recording .logo-wrap{animation: none}
+.recording .rings{opacity:1}
+.recording .ring{
+  box-shadow:0 0 24px rgba(0,229,255,.35), inset 0 0 18px rgba(0,229,255,.2);
+}
+.recording .logo-wrap{filter: drop-shadow(0 0 22px rgba(0,229,255,.45));}
+
+/* Kliknięcie – krótki neon pulse */
+.clicked .logo-wrap{animation:pulse 500ms ease-out}
+
+/* Dolny pasek */
+.bottom-bar{
+  position:fixed; left:50%; transform:translateX(-50%); bottom:14px; z-index:2200;
+  display:flex; gap:10px; padding:6px 8px;
+  background:rgba(10,10,16,.6); backdrop-filter: blur(10px);
+  border:1px solid rgba(255,255,255,.08); border-radius:16px;
+}
+.pill{
+  border:0; border-radius:999px; padding:10px 14px; font-weight:700; cursor:pointer;
+  background: linear-gradient(180deg, #ffc400, #ff8f00); color:#1a1a1a;
+}
+.pill:active{transform:translateY(1px)}
+
+/* Toast / baner do odblokowania audio */
+.toast{
+  position:fixed; left:50%; transform:translateX(-50%); top:64px; z-index:2600;
+  background:#222632; color:var(--txt); border:1px solid rgba(255,255,255,.1);
+  padding:10px 14px; border-radius:12px; font-size:14px;
+  display:none;
+}
+.toast.show{display:block}
+
+/* Animacje */
+@keyframes drop{
+  0%{ transform:translate(-50%,-60px) scale(.7); opacity:0 }
+  100%{ transform:translate(-50%,0) scale(1); opacity:1 }
+}
+@keyframes pulse{
+  0%{ transform:translateX(-50%) scale(1);   filter: drop-shadow(0 0 0 rgba(255,180,0,0)); }
+  50%{ transform:translateX(-50%) scale(1.06); filter: drop-shadow(0 0 18px rgba(255,180,0,.55)); }
+  100%{ transform:translateX(-50%) scale(1);   filter: drop-shadow(0 0 0 rgba(255,180,0,0)); }
+}
+@keyframes spin{ to{ transform:rotate(360deg) scale(1) } }
+@keyframes breathe{
+  0%,100%{ transform:scale(.9) }
+  50%{ transform:scale(1.02) }
+}
+
+/* Responsywność */
+@media (max-width:400px){
+  .logo-wrap{ width:78vw }
+  .pill{ padding:10px 12px; font-size:15px }
+}
+</style>
 </head>
 <body>
   <!-- Pasek u góry -->
   <header class="topbar">
     <div class="brand">FreeFlow</div>
     <nav class="top-actions">
-      <button class="icon-btn" aria-label="Menu" onclick="toggleMenu()">
-        ☰
-      </button>
-      <button class="icon-btn" aria-label="Koszyk" onclick="openCart()">
-        🛒 <span class="badge" id="cartCount">0</span>
-      </button>
+      <button class="icon-btn" aria-label="Menu" onclick="toggleMenu()">☰</button>
+      <button class="icon-btn" aria-label="Koszyk" onclick="openCart()">🛒 <span class="badge" id="cartCount">0</span></button>
     </nav>
   </header>
 
   <!-- Menu rozwijane -->
   <div class="dropdown" id="mainMenu">
     <button onclick="selectPay('blik')">Płatność: BLIK</button>
-    <button onclick="selectPay('card')">Płatność: Karta</button>
-    <button onclick="selectPay('cash')">Płatność: Gotówka</button>
+    <button onclick="selectPay('karta')">Płatność: Karta</button>
+    <button onclick="selectPay('gotówka')">Płatność: Gotówka</button>
   </div>
 
-  <!-- Logo jako „kropla” + animacja + filtr usuwający czarne tło -->
-  <div class="logo-wrap" onclick="logoClick()">
-    <svg class="logo-svg" viewBox="0 0 768 1152" aria-label="FreeFlow logo">
-      <defs>
-        <!-- Filtr: czarne/ciemne piksele -> przezroczystość -->
-        <filter id="removeBlack" color-interpolation-filters="sRGB">
-          <!-- wyciągamy luminancję -->
-          <feColorMatrix type="matrix" values="
-            0.2126 0.7152 0.0722 0 0
-            0.2126 0.7152 0.0722 0 0
-            0.2126 0.7152 0.0722 0 0
-            0       0       0       1 0" result="lum"/>
-          <!-- z luminancji robimy alfę -->
-          <feComponentTransfer in="lum" result="a">
-            <!-- poniżej prog=0.18 ustaw alfa~0, powyżej rośnie -->
-            <feFuncR type="identity"/>
-            <feFuncG type="identity"/>
-            <feFuncB type="identity"/>
-            <feFuncA type="linear" slope="5" intercept="-0.9"/>
-          </feComponentTransfer>
-          <!-- łączymy kolor oryginalny z wyliczoną alfą -->
-          <feComposite operator="in" in="SourceGraphic" in2="a"/>
-        </filter>
+  <!-- Baner do odblokowania autoplay -->
+  <div id="audioToast" class="toast">🔊 Stuknij, aby odtworzyć komunikat</div>
 
-        <!-- subtelna poświata neonowa przy kliknięciu -->
-        <filter id="glow">
-          <feGaussianBlur stdDeviation="6" result="b"/>
-          <feMerge>
-            <feMergeNode in="b"/>
-            <feMergeNode in="SourceGraphic"/>
-          </feMerge>
-        </filter>
-      </defs>
-
-      <!-- Obraz z repo (raw) -->
-      <image
-        href="https://raw.githubusercontent.com/ndoemo02/Freeflo/main/Freeflow-logo.png"
-        x="0" y="0" width="768" height="1152"
-        preserveAspectRatio="xMidYMid meet"
-        filter="url(#removeBlack)"/>
-    </svg>
+  <!-- Logo + fale -->
+  <div id="appRoot">
+    <div class="logo-wrap" id="logo" onclick="toggleVoice()">
+      <!-- Fale (3 pierścienie) -->
+      <div class="rings">
+        <div class="ring r1"></div>
+        <div class="ring r2"></div>
+        <div class="ring r3"></div>
+      </div>
+      <!-- SVG z filtrem usuwającym czarne tło -->
+      <svg class="logo-svg" viewBox="0 0 768 1152" aria-label="FreeFlow logo">
+        <defs>
+          <filter id="removeBlack" color-interpolation-filters="sRGB">
+            <feColorMatrix type="matrix" values="
+              0.2126 0.7152 0.0722 0 0
+              0.2126 0.7152 0.0722 0 0
+              0.2126 0.7152 0.0722 0 0
+              0       0       0       1 0" result="lum"/>
+            <feComponentTransfer in="lum" result="a">
+              <feFuncR type="identity"/>
+              <feFuncG type="identity"/>
+              <feFuncB type="identity"/>
+              <!-- slope/intercept ~ próg czerni -->
+              <feFuncA type="linear" slope="5" intercept="-0.9"/>
+            </feComponentTransfer>
+            <feComposite operator="in" in="SourceGraphic" in2="a"/>
+          </filter>
+        </defs>
+        <image
+          href="https://raw.githubusercontent.com/ndoemo02/Freeflo/main/Freeflow-logo.png"
+          x="0" y="0" width="768" height="1152"
+          preserveAspectRatio="xMidYMid meet"
+          filter="url(#removeBlack)"/>
+      </svg>
+    </div>
   </div>
 
   <!-- Przyciski dolne -->
   <div class="bottom-bar">
-    <button class="pill" onclick="choose('food')">🍽️ Jedzenie</button>
-    <button class="pill" onclick="choose('taxi')">🚕 Taxi</button>
-    <button class="pill" onclick="choose('hotel')">🏨 Hotel</button>
+    <button class="pill" onclick="quickIntent('Jedzenie')">🍽️ Jedzenie</button>
+    <button class="pill" onclick="quickIntent('Taxi')">🚕 Taxi</button>
+    <button class="pill" onclick="quickIntent('Hotel')">🏨 Hotel</button>
   </div>
 
-  <script>
-    let cart = 0;
+<script>
+let cart = 0;
+let recording = false;
 
-    function logoClick() {
-      const wrap = document.querySelector('.logo-wrap');
-      wrap.classList.add('clicked');
-      setTimeout(() => wrap.classList.remove('clicked'), 500);
-      // Tu podpinamy Voice start/stop:
-      // startVoiceRecording();
-    }
+/* Topbar */
+function toggleMenu(){
+  document.getElementById('mainMenu').classList.toggle('open');
+}
+function openCart(){
+  alert('Koszyk (demo). Tu pokażesz listę i checkout.');
+}
+function selectPay(type){
+  alert(`Wybrano metodę płatności: ${type.toUpperCase()}`);
+  toggleMenu();
+}
 
-    function toggleMenu() {
-      const m = document.getElementById('mainMenu');
-      m.classList.toggle('open');
-    }
+/* Szybkie intencje (spięte z „voice”) */
+function quickIntent(kind){
+  cart += 1;
+  document.getElementById('cartCount').textContent = cart;
+  speak(`Wybrano: ${kind}. Dodano do koszyka.`);
+}
 
-    function openCart() {
-      alert('Koszyk otwarty (demo). Tu pokażesz zawartość i checkout.');
-    }
+/* Voice ON/OFF + stan UI */
+function toggleVoice(){
+  recording = !recording;
+  const root = document.body;
+  root.classList.toggle('recording', recording);
 
-    function selectPay(type) {
-      alert(`Wybrano metodę płatności: ${type.toUpperCase()}`);
-      toggleMenu();
-    }
+  // krótki neon pulse na klik:
+  root.classList.add('clicked');
+  setTimeout(()=>root.classList.remove('clicked'), 500);
 
-    function choose(kind) {
-      const map = { food: 'Jedzenie', taxi: 'Taxi', hotel: 'Hotel' };
-      cart += 1;
-      document.getElementById('cartCount').textContent = cart;
-      alert(`Wybrano: ${map[kind]} (demo). Dodano do koszyka.`);
+  if(recording){
+    speak('Nagrywanie włączone. Słucham.');
+    // TODO: tu podłącz realny start nagrywania (Whisper / Web API)
+    // startRecording();
+  }else{
+    speak('Nagrywanie wyłączone.');
+    // stopRecording();
+  }
+}
+
+/* Mowa: damski głos PL przez SpeechSynthesis */
+function speak(text){
+  try{
+    const u = new SpeechSynthesisUtterance(text);
+    u.lang = 'pl-PL';
+    // Preferencja damskiego głosu, jeśli dostępny
+    const voices = speechSynthesis.getVoices();
+    const prefer = voices.find(v => v.lang.startsWith('pl') && /female|Zosia|Paulina|Agata|Agnieszka/i.test(v.name));
+    const anyPL = voices.find(v => v.lang.startsWith('pl'));
+    u.voice = prefer || anyPL || null;
+    u.rate = 1; u.pitch = 1; u.volume = 1;
+    speechSynthesis.cancel(); // czyść kolejkę
+    speechSynthesis.speak(u);
+  }catch(e){
+    console.warn('SpeechSynthesis error:', e);
+  }
+}
+
+/* Komunikat na start */
+const introText = 'W celu złożenia zamówienia proszę nacisnąć przycisk.';
+async function tryAutoplay(){
+  // Próbujemy od razu (na części urządzeń zadziała)
+  speak(introText);
+
+  // Jeśli przeglądarka zablokuje (często na mobile), pokaż baner „stuknij”
+  setTimeout(()=>{
+    // heurystyka: jeśli nadal mówimy – ok; jeśli nie – pokaż toast
+    if(!speechSynthesis.speaking){
+      const t = document.getElementById('audioToast');
+      t.classList.add('show');
+      const unlock = ()=>{
+        t.classList.remove('show');
+        speak(introText);
+        window.removeEventListener('pointerdown', unlock, {passive:true});
+        window.removeEventListener('touchstart', unlock, {passive:true});
+        window.removeEventListener('click', unlock, {passive:true});
+      };
+      window.addEventListener('pointerdown', unlock, {passive:true});
+      window.addEventListener('touchstart', unlock, {passive:true});
+      window.addEventListener('click', unlock, {passive:true});
     }
-  </script>
+  }, 600);
+}
+
+/* iOS/webview czasem ładuje głosy asynchronicznie */
+if (typeof speechSynthesis !== 'undefined'){
+  speechSynthesis.onvoiceschanged = ()=>{};
+}
+
+window.addEventListener('load', tryAutoplay, {once:true});
+</script>
 </body>
 </html>
